--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <img src="images/logo/Booki.png" alt="Logo Booki">
             <nav>
-                <button class="header-button">Hébergements</button>
+                <button class="header-button active">Hébergements</button>
                 <button class="header-button">Activités</button>
             </nav>
         </header>
@@ -28,16 +28,24 @@
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre-ville ou en pleine nature</p>
                 <div class="search-bar">
-                    <input type="text" placeholder="Marseille, France">
-                    <button class="search-button">Rechercher</button>
+                    <form method="get" action="#">
+                        <div class="search-input-container">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <input type="text" placeholder="Marseille, France" />
+                        </div>
+                        <button type="submit" class="search-button">
+                            <span class="search-text">Rechercher</span>
+                            <i class="fa-solid fa-search search-icon"></i>
+                        </button>
+                    </form>
                 </div>
-                <div class="filters">
+            <div class="filters">
                     <button class="filter-button"><i class="fa-solid fa-wallet"></i> Économique</button>
                     <button class="filter-button"><i class="fa-solid fa-person"></i> Familial</button>
                     <button class="filter-button"><i class="fa-solid fa-heart"></i> Romantique</button>
                     <button class="filter-button"><i class="fa-solid fa-fire"></i> Nos pépites</button>
-                </div>
-                <p class="availability-info"><i class="fa-solid fa-info-circle"></i> Plus de 500 logements sont disponibles dans cette ville</p>
+            </div>
+            <p class="availability-info"><i class="fa-solid fa-info-circle"></i> Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
         </nav>
         <main>
