Modif HTML et CSS

--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
                     </form>
                 </div>
             <div class="filters">
-                    <button class="filter-button"><i class="fa-solid fa-wallet"></i> Économique</button>
-                    <button class="filter-button"><i class="fa-solid fa-person"></i> Familial</button>
-                    <button class="filter-button"><i class="fa-solid fa-heart"></i> Romantique</button>
-                    <button class="filter-button"><i class="fa-solid fa-fire"></i> Nos pépites</button>
+                    <h1>Filtres</h1>
+                    <button class="filter-button active"><i class="fa-solid fa-money-bill-wave"></i> Économique</button>
+                    <button class="filter-button active"><i class="fa-solid fa-person"></i> Familial</button>
+                    <button class="filter-button active"><i class="fa-solid fa-heart"></i> Romantique</button>
+                    <button class="filter-button active"><i class="fa-solid fa-fire"></i> Nos pépites</button>
             </div>
             <p class="availability-info"><i class="fa-solid fa-info-circle"></i> Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
