--- a/index.html
+++ b/index.html
@@ -48,14 +48,17 @@
                     <button class="filter-button active"><i class="fa-solid fa-heart"></i> Romantique</button>
                     <button class="filter-button active"><i class="fa-solid fa-fire"></i> Nos pépites</button>
             </div>
-            <p class="availability-info"><i class="fa-solid fa-info-circle"></i> Plus de 500 logements sont disponibles dans cette ville</p>
+            <p class="availability-info">
+                <i class="fa-solid fa-info"></i>
+                Plus de 500 logements sont disponibles dans cette ville
+            </p>
             </div>
         </nav>
         <main>
             <div class="hebergements-and-populaires">
-            </div>
-            
                 <section class="hebergements">
+                    <h2 class="hebergements-title"></h2>
+                    <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
                 </section>
                 <section class="populaires">
                     <div class="populaires-title">
@@ -69,7 +72,7 @@
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Hôtel Le soleil du matin</h3>
-                                        <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
+                                        <p class="card-subtitle">Nuit à partir de 1288<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
