Partie footer ajouté

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,17 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
     <div class="main-container">
         <header>
             <img class="logo" src="images/logo/Booki.png" alt="Logo Booki">
             <nav>
-                <button class="header-button active">Hébergements</button>
-                <button class="header-button">Activités</button>
+                <a href="#hebergements-id" class="header-button active">Hébergements</a>
+                <a href="#activites-id" class="header-button acitve">Activités</a>
             </nav>
         </header>
         <nav>
@@ -56,7 +54,7 @@
         </nav>
         <main>
             <div class="hebergements-and-populaires">
-                <section class="hebergements">
+                <section id="hebergements-id" class="hebergements">
                     <h2 class="section-title">Hébergement à Marseille</h2>
                     <div class="directionRow">
                         <article class="hebergements-cards">
@@ -67,10 +65,10 @@
                                         <h3 class="card-title">Hôtel du port</h3>
                                         <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
                                         <div class="card-rating">
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
                                             <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                             <span class="sr-only">Note de 4 sur 5</span>
                                         </div>
@@ -86,10 +84,10 @@
                                         <h3 class="card-title">Hôtel chez Amina</h3>
                                         <p class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
                                         <div class="card-rating">
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
                                             <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                             <span class="sr-only">Note de 4 sur 5</span>
                                         </div>
@@ -105,10 +103,10 @@
                                         <h3 class="card-title">Hôtel Les mouettes</h3>
                                         <p class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></p>
                                         <div class="card-rating">
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
                                             <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                             <span class="sr-only">Note de 4 sur 5</span>
                                         </div>
@@ -126,10 +124,10 @@
                                         <h3 class="card-title">Hôtel de la mer</h3>
                                         <p class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
                                         <div class="card-rating">
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
                                             <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                             <span class="sr-only">Note de 4 sur 5</span>
                                         </div>
@@ -145,10 +143,10 @@
                                         <h3 class="card-title">Auberge La Canebière</h3>
                                         <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
                                         <div class="card-rating">
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
                                             <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                             <span class="sr-only">Note de 4 sur 5</span>
                                         </div>
@@ -164,10 +162,10 @@
                                         <h3 class="card-title">Auberge Le Panier</h3>
                                         <p class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
                                         <div class="card-rating">
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
                                             <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                             <span class="sr-only">Note de 4 sur 5</span>
                                         </div>
@@ -193,10 +191,10 @@
                                         <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
@@ -212,10 +210,10 @@
                                         <p class="card-subtitle">Nuit à partir de 71<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
@@ -231,10 +229,10 @@
                                         <p class="card-subtitle">Nuit à partir de 68<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star blue" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
@@ -244,9 +242,68 @@
                     </div>
                 </section>
             </div>
+            <div class="activites-section">
+                <section id="activites-id" class="activites">
+                    <h2 class="activites-title">Activités à Marseille</h2>
+                    <article class="activites-cards">
+                        <div class="directionRow-activites">    
+                            <a href="#">
+                                <div class="card-activites">
+                                    <img class="activites-cards img" src="./images/activites/reno-laithienne.jpg" alt="Image du Vieux-Port avec des bâteaux">
+                                    <div class="activites-card-content">
+                                        <h3 class="activites-card-title">Vieux-Port</h3>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#">
+                                <div class="card-activites">
+                                    <img class="activites-cards img" src="./images/activites/paul-hermann.jpg" alt="Image du Fort de Pomègues">
+                                    <div class="activites-card-content">
+                                        <h3 class="activites-card-title">Fort de Pomègues</h3>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#">
+                                <div class="card-activites">
+                                    <img class="activites-cards img" src="./images/activites/kilyan-sockalingum.jpg" alt="Image des Calanques">
+                                    <div class="activites-card-content">
+                                        <h3 class="activites-card-title">Parc national des Calanques</h3>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#">
+                                <div class="card-activites">
+                                    <img class="activites-cards img" src="./images/activites/florian-wehde.jpg" alt="Image de Notre-Dame-de-la-Garde">
+                                    <div class="activites-card-content">
+                                        <h2 class="activites-card-title">Notre-Dame-de-la-Garde</h2>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </article>
+                </section>
+            </div>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="footer-container">
+                <section class="a-propos">
+                    <h1>À propos</h1>
+                    <p>Fonctionnement du site</p>
+                    <p>Conditions générales</p>
+                    <p>Données et confidentialités</p>
+                </section>
+                <section class="nos-hebergements">
+                    <h2>Nos hébergements</h2>
+                    <p>Charte qualité</p>
+                    <p>Proposer votre hôtel</p>
+                </section>
+                <section class="assistance">
+                    <h2>Assistance</h2>
+                    <p>Centre d'aide</p>
+                    <p>Nous contacter</p>
+                </section>
+            </div>
+        </footer>
     </div>
 </body>
-
 </html>
