--- a/index copy.html
+++ b/index copy.html
@@ -56,10 +56,10 @@
         </nav>
         <main>
             <div class="hebergements-and-populaires">
-                <section id="hebergements-id" class="hebergements"> <!--Changer en div-->
+                <section id="hebergements-id" class="hebergements">
                     <h2 class="section-title">Hébergement à Marseille</h2>
                     <div class="directionRow">
-                        <div class="hebergements-cards">
+                        <article class="hebergements-cards">
                             <a href="#">
                                 <article class="card">
                                     <img class="hebergements-cards img" src="images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
@@ -77,8 +77,8 @@
                                     </div>
                                 </article>
                             </a>
-                        </div>
-                        <div class="hebergements-cards">
+                        </article>
+                        <article class="hebergements-cards">
                             <a href="#">
                                 <article class="card">
                                     <img class="hebergements-cards img" src="images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit">
@@ -96,8 +96,8 @@
                                     </div>
                                 </article>
                             </a>
-                        </div>
-                        <div class="hebergements-cards">
+                        </article>
+                        <article class="hebergements-cards">
                             <a href="#">
                                 <article class="card">
                                     <img class="hebergements-cards img" src="images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit">
@@ -115,7 +115,7 @@
                                     </div>
                                 </article>
                             </a>
-                        </div>
+                        </article>
                     </div>
                     <div class="directionRow">
                         <article class="hebergements-cards">
@@ -246,11 +246,11 @@
             </div>
             <div class="activites-section">
                 <h2 class="activites-title" id="activites-id">Activités à Marseille</h2>
-                <article class="activites-cards">
+                <div class="activites-cards">
                     <div class="directionRow-activites">    
                         <a href="#">
                             <div class="card-activites">
-                                <img class="activites-cards img" src="./images/activites/reno-laithienne.jpg" alt="Image du Vieux-Port avec des bâteaux">
+                                <img src="./images/activites/reno-laithienne.jpg" alt="Image du Vieux-Port avec des bâteaux">
                                 <div class="activites-card-content">
                                     <h3 class="activites-card-title">Vieux-Port</h3>
                                 </div>
@@ -258,7 +258,7 @@
                         </a>
                         <a href="#">
                             <div class="card-activites">
-                                <img class="activites-cards img" src="./images/activites/paul-hermann.jpg" alt="Image du Fort de Pomègues">
+                                <img src="./images/activites/paul-hermann.jpg" alt="Image du Fort de Pomègues">
                                 <div class="activites-card-content">
                                     <h3 class="activites-card-title">Fort de Pomègues</h3>
                                 </div>
@@ -266,7 +266,7 @@
                         </a>
                         <a href="#">
                             <div class="card-activites">
-                                <img class="activites-cards img" src="./images/activites/kilyan-sockalingum.jpg" alt="Image des Calanques">
+                                <img src="./images/activites/kilyan-sockalingum.jpg" alt="Image des Calanques">
                                 <div class="activites-card-content">
                                     <h3 class="activites-card-title">Parc national des Calanques</h3>
                                 </div>
@@ -274,14 +274,14 @@
                         </a>
                         <a href="#">
                             <div class="card-activites">
-                                <img class="activites-cards img" src="./images/activites/florian-wehde.jpg" alt="Image de Notre-Dame-de-la-Garde">
+                                <img src="./images/activites/florian-wehde.jpg" alt="Image de Notre-Dame-de-la-Garde">
                                 <div class="activites-card-content">
                                     <h3 class="activites-card-title">Notre-Dame-de-la-Garde</h3>
                                 </div>
                             </div>
                         </a>
                     </div>
-                </article>
+                </div>
             </div>
         </main>
         <footer>
