--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </nav>
         <main>
             <div class="hebergements-and-populaires">
-                <section id="hebergements-id" class="hebergements"> <!--Changer en div-->
+                <div class="hebergements" id="hebergements-id">
                     <h2 class="section-title">Hébergement à Marseille</h2>
                     <div class="directionRow">
                         <div class="hebergements-cards">
@@ -118,7 +118,7 @@
                         </div>
                     </div>
                     <div class="directionRow">
-                        <article class="hebergements-cards">
+                        <div class="hebergements-cards">
                             <a href="#">
                                 <article class="card">
                                     <img class="hebergements-cards img" src="images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit">
@@ -136,8 +136,8 @@
                                     </div>
                                 </article>
                             </a>
-                        </article>
-                        <article class="hebergements-cards">
+                        </div>
+                        <div class="hebergements-cards">
                             <a href="#">
                                 <article class="card">
                                     <img class="hebergements-cards img" src="images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
@@ -155,8 +155,8 @@
                                     </div>
                                 </article>
                             </a>
-                        </article>
-                        <article class="hebergements-cards">
+                        </div>
+                        <div class="hebergements-cards">
                             <a href="#">
                                 <article class="card">
                                     <img class="hebergements-cards img" src="images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit">
@@ -174,11 +174,11 @@
                                     </div>
                                 </article>
                             </a>
-                        </article>
+                        </div>
                     </div>
                     <p class="afficher-plus">Afficher plus</p>
-                </section>
-                <section class="populaires">
+                </div>
+                <div class="populaires">
                     <div class="populaires-title">
                         <h2 class="section-title">Les plus populaires</h2>
                         <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
@@ -242,7 +242,7 @@
                             </article>
                         </a>
                     </div>
-                </section>
+                </div>
             </div>
             <div class="activites-section">
                 <h2 class="activites-title" id="activites-id">Activités à Marseille</h2>
